@@ -52,7 +52,8 @@ sparc_find_call (parent, p_lowpc, p_highpc)
       p_highpc = s_highpc;
     }
   DBG (CALLDEBUG, printf ("[find_call] %s: 0x%lx to 0x%lx\n",
-			  parent->name, p_lowpc, p_highpc));
+			  parent->name, (unsigned long) p_lowpc,
+			  (unsigned long) p_highpc));
   for (instr = (unsigned int *) (((p_lowpc + delta) + 3) &~ 3);
        instr < (unsigned int *) (p_highpc + delta);
        ++instr)
@@ -60,7 +61,8 @@ sparc_find_call (parent, p_lowpc, p_highpc)
       if ((*instr & CALL))
 	{
 	  DBG (CALLDEBUG,
-	       printf ("[find_call] 0x%lx: callf", (bfd_vma) instr - delta));
+	       printf ("[find_call] 0x%lx: callf",
+		       (unsigned long) instr - delta));
 	  /*
 	   * Regular pc relative addressing check that this is the
 	   * address of a function.
@@ -71,7 +73,8 @@ sparc_find_call (parent, p_lowpc, p_highpc)
 	      child = sym_lookup (&symtab, dest_pc);
 	      DBG (CALLDEBUG,
 		   printf ("\tdest_pc=0x%lx, (name=%s, addr=0x%lx)\n",
-			   dest_pc, child->name, child->addr));
+			   (unsigned long) dest_pc, child->name,
+			   (unsigned long) child->addr));
 	      if (child->addr == dest_pc)
 		{
 		  /* a hit:  */
